# tkaligner-bumblebee

./: 00-memo-tkaligner-bumblebee.txt  README.md  check_thread_update.py  clipboard1_aligned-p.csv  clipboard1_aligned-p.tmx  clipboard1_aligned-p.xlsx  clipboard1_aligned-s.csv  clipboard1_aligned-s.tmx  clipboard1_aligned-s.xlsx  cp-files-and-dir.bat  dual_text.py  lib-loc.bat  loc-myapps-tkaligner.bat  myprogressbar1_ui.py  myprogressbar1_ui_support.py  myprogressbar_ui_support.py  nodemon.json  pyproject.toml  queue1_put.py  queues.py  rsync-bee_aligner-tkaligner-pyc-to-dist.py  rsync-pyc-to-dist.py  rsync-removable.bat  rsync-some-libs.py  rsync-tkaligner-pyc-to-dist.py  run-dist-tkaligner-bumblebee.bat  run-nodemon.bat  run-nodemon1.bat  run-pyinstaller--name_tkaligner-bumblebee-tkaligner.__main__.bat  run-pyinstaller_tkaligner-bumblebee.spec.bat  run-python-m-tkaligner.bat  rundown-after-pysintaller-spec-memo.txt  start-venv.bat  tkaligner-bumblebee.spec
tests/: 0test_aligned-s.csv  langcode_to_tmxcode.py  test_langcode_to_tmxcode.py  test_lists_to_tmx.py  test_tkaligner.py
tkaligner/: __main__.py  aligner_ui.py  aligner_ui_support.py  cancel1_command.py  check_thread_update.py  check_thread_update1.py  extract_rows.py  fetch_queue1.py  frame2.py  frame3.py  get_time.py  insert_column.py  lcid.json  lists_to_tmx.py  load_paras.py  longtime_job.py  mypad.py  mypad_support.py  myprogressbar1_ui.py  myprogressbar_ui.py  mytable.py  open1_command.py  open2_command.py  palign_command.py  paste1_command.py  paste2_command.py  queue1_put.py  queues.py  quit_command.py  (+8 more)
(+8 files in other folders)
