[tool.poetry]
name = "tkaligner"
version = "0.1.0"
description = "tkaligner with bumblebee backend"
authors = ["ffreemt"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ffreemt/tkaligner-bumblebee"
repository = "https://github.com/ffreemt/tkaligner-bumblebee"
keywords = ["mt", "language", "mtx", "tkinter"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
logzero = "^1.7.0"
blinker = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# New scripts
[tool.poetry.scripts]
tkaligner-bumblebee = "tkaligner.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
